--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-paper dark:bg-black text-primary dark:text-paper transition-all duration-300">
+  <body class="realtive texture bg-paper dark:bg-black text-primary dark:text-paper transition-all duration-300">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
