Made a custom paper button componet and designed the shope page - skeleton

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en" class="">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="realtive texture bg-paper dark:bg-black text-primary dark:text-paper transition-all duration-300">
-    <div id="root"></div>
+  <body class="bg-paper dark:bg-black text-primary dark:text-paper transition-all duration-300">
+    <div id="root" class="relative texture"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
