added noise testure on entire website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body class="bg-paper dark:bg-black text-primary dark:text-paper transition-all duration-300">
-    <div id="root" class="relative texture"></div>
+
+    <div class="fixed top-0 left-0 texture pointer-events-none w-[100svw] h-[100svh] opacity-[0.2]"></div>
+
+    <div id="root" class="relative"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
