Refactor project to TypeScript: rename files, add type definitions for cart and user, and update ESLint configuration Version 1 | converting to TypeScript

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="fixed top-0 left-0 texture pointer-events-none w-[100svw] h-[100svh] opacity-[0.2]"></div>
 
     <div id="root" class="relative"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
