--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-secondary dark:bg-primary text-primary dark:text-paper transition-all duration-300">
+  <body class="bg-secondary  dark:bg-primary text-primary dark:text-paper transition-all duration-300">
 
-    <div class="fixed top-0 left-0 texture pointer-events-none w-[100svw] h-[100svh] opacity-[0.2]"></div>
+    <div class="fixed top-0 left-0 z-[1000] bg-texture pointer-events-none w-[100svw] h-[100svh] opacity-[0.2]"></div>
 
     <div id="root" class="relative"></div>
     <script type="module" src="/src/main.tsx"></script>
