Add Redux logger types and create web app manifest for Cruse Clothing

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Vite + React" />
+    <meta name="keywords" content="Cruse clothing, cloths cruse, clothing, retro style, 19s clothing style website" />
+    <meta name="author" content="https://github.com/itsSauraj" />
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Cruse" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <link rel="preconnect" href="https://firebase.googleapis.com" />
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <title>Cruse Clothing</title>
   </head>
   <body class="bg-secondary  dark:bg-primary text-primary dark:text-paper transition-all duration-300">
 
